--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,3 +59,11 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
       - ./db-data/mongo/:/data/db/
+
+  mailhog:
+    # image: 'mailhog/mailhog:latest'
+    # Mailhog that works with Apple Silicon
+    image: 'jcalonso/mailhog'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
